force-app/main/default/objects/Matter__c/Matter__c.object-meta.xml
<CustomObject>
    <label>Matter</label>
    <pluralLabel>Matters</pluralLabel>
    <nameField>
        <label>Matter Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>