force-app/main/default/objects/Matter__c/fields/Assigned_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Attorney__c</fullName>
    <label>Assigned Attorney</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Matters</relationshipName>
    <relationshipLabel>Matters (Assigned Attorney)</relationshipLabel>
</CustomField>