force-app/main/default/objects/Matter__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
            <value><fullName>On Hold</fullName><default>false</default><label>On Hold</label></value>
            <value><fullName>Settled</fullName><default>false</default><label>Settled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>